<resources>
    <string name="app_name">Unsplash Skillbox</string>
    <string name="hello">Hello!</string>
    <string name="intro_first">Take pictures, visit, build an audience, get feedback!</string>
    <string name="intro_second">Share with friends, collect collections</string>
    <string name="intro_third">Upload your favorite shots and track statistics</string>
    <string name="finish">Finish</string>
    <string name="skip">Skip</string>
    <string name="get_started">Get started</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="unsplash_app">Unsplash application</string>
    <string name="sign_in">Sign in</string>

    <string name="auth_login">Sign in</string>
    <string name="auth_canceled">Authentication failed</string>
    <string name="corrupt_access_token">Corrupt access token</string>
    <string name="get_user_info">Get user info</string>
    <string name="get_user_error">Get user error</string>
    <string name="logout">logout</string>
    <string name="ic_image_desc">Images</string>
    <string name="collections_desc">Collections</string>
    <string name="user_account">User account</string>
    <string name="offline_mode">offline mode</string>
    <string name="empty" />
    <string name="about">About</string>
    <string name="camera">Camera</string>
    <string name="aperture">Aperture</string>
    <string name="focal_length">Focal length</string>
    <string name="shutter_speed">Shutter speed</string>
    <string name="iso">ISO</string>
    <string name="dimensions">Dimensions</string>
    <string name="views">Views</string>
    <string name="downloads">Downloads</string>
    <string name="likes">Likes</string>
    <string name="download_is_finished">Download is finished</string>
    <string name="no_application">No app to display data</string>
    <string name="download_finished_with_status">Download is finished with status</string>
    <string name="open">Open</string>
    <string name="image_downloading">Image downloading</string>
    <string name="chose_one">Chose one</string>
    <string name="search">Search</string>
    <string name="photos">Photos</string>
    <string name="title">Title:</string>
    <string name="total_photo">Total photo:</string>
    <string name="author">Author:</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="liked">Liked</string>
    <string name="collections">Collections</string>
    <string name="logout_desc">Logout</string>
    <string name="share">Share</string>
    <string name="rate_limit_message">The limit on the allowed number of calls to the Unsplash server has been reached. \n Please try again later.</string>

</resources>