<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">
    <!--Left column-->
    <TextView
        android:id="@+id/cameraLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/apertureLabel"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cameraValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="50pt"
        android:textAlignment="center"
        android:layout_marginTop="3dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/cameraLabel"
        app:layout_constraintStart_toStartOf="@+id/cameraLabel"
        app:layout_constraintTop_toBottomOf="@id/cameraLabel"
        tools:text="Canon" />

    <TextView
        android:id="@+id/focalLengthLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/focal_length"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/cameraValue"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/cameraValue"
        app:layout_constraintTop_toBottomOf="@+id/cameraValue" />

    <TextView
        android:id="@+id/focalLengthValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/focalLengthLabel"
        app:layout_constraintStart_toStartOf="@+id/focalLengthLabel"
        app:layout_constraintTop_toBottomOf="@id/focalLengthLabel"
        tools:ignore="InOrMmUsage"
        tools:text="16.0mm" />

    <TextView
        android:id="@+id/isoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/iso"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/focalLengthValue"
        app:layout_constraintStart_toStartOf="@+id/focalLengthValue"
        app:layout_constraintTop_toBottomOf="@+id/focalLengthValue" />

    <TextView
        android:id="@+id/isoValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/isoLabel"
        app:layout_constraintStart_toStartOf="@+id/isoLabel"
        app:layout_constraintTop_toBottomOf="@id/isoLabel"
        tools:text="600" />

    <!--Right column-->
    <TextView
        android:id="@+id/apertureLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aperture"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cameraLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/apertureValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/apertureLabel"
        app:layout_constraintStart_toStartOf="@+id/apertureLabel"
        app:layout_constraintTop_toBottomOf="@+id/apertureLabel"
        tools:text="f/10" />

    <TextView
        android:id="@+id/shutterSpeedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/shutter_speed"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/apertureLabel"
        app:layout_constraintStart_toStartOf="@+id/apertureLabel"
        app:layout_constraintTop_toBottomOf="@+id/apertureValue" />

    <TextView
        android:id="@+id/shutterSpeedValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/shutterSpeedLabel"
        app:layout_constraintStart_toStartOf="@+id/shutterSpeedLabel"
        app:layout_constraintTop_toBottomOf="@+id/shutterSpeedLabel"
        tools:text="1/800s" />

    <TextView
        android:id="@+id/dimensionsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/dimensions"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/shutterSpeedValue"
        app:layout_constraintStart_toStartOf="@+id/shutterSpeedValue"
        app:layout_constraintTop_toBottomOf="@+id/shutterSpeedValue" />

    <TextView
        android:id="@+id/dimensionsValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/dimensionsLabel"
        app:layout_constraintStart_toStartOf="@+id/dimensionsLabel"
        app:layout_constraintTop_toBottomOf="@+id/dimensionsLabel"
        tools:text="4322x6483" />

</androidx.constraintlayout.widget.ConstraintLayout>