<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/viewsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/views"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toStartOf="@+id/downloadsLabel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/viewsTextValue"
        tools:text="1.4M"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/viewsLabel"
        app:layout_constraintEnd_toEndOf="@id/viewsLabel"
        app:layout_constraintTop_toBottomOf="@id/viewsLabel" />

    <TextView
        android:id="@+id/downloadsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/downloads"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toStartOf="@+id/likesLabel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/viewsLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/downloadsTextValue"
        tools:text="1.2K"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/downloadsLabel"
        app:layout_constraintEnd_toEndOf="@id/downloadsLabel"
        app:layout_constraintTop_toBottomOf="@id/downloadsLabel" />

    <TextView
        android:id="@+id/likesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/likes"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/downloadsLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/likesTextValue"
        tools:text="1.2K"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/likesLabel"
        app:layout_constraintEnd_toEndOf="@id/likesLabel"
        app:layout_constraintTop_toBottomOf="@id/likesLabel" />


</androidx.constraintlayout.widget.ConstraintLayout>